Fixed height and z-index of hamburger menu

--- a/src/styles/components/_hamburger-menu.scss
+++ b/src/styles/components/_hamburger-menu.scss
@@ -6,6 +6,7 @@
     overflow: scroll;
     transform: translateX(-100%);
     width: 100%;
+    height: 100%
 }
 
 .hamburger-menu--show {
